# lidar2cam_projection

src/build-image-ROS-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  image.cbp
src/build-image-ROS-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/build-image-ROS-Default/catkin_generated/installspace/: image-msg-extras.cmake  image-msg-paths.cmake  image.pc  imageConfig.cmake
src/build-image-ROS-Default/catkin_generated/stamps/image/: package.xml.stamp
src/build-image-ROS-Default/cmake/: image-genmsg-context.py  image-genmsg.cmake
src/build-image-ROS-Default/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/build-image-ROS-Default/devel/lib/image/: image
src/build-image-ROS-Default/devel/lib/pkgconfig/: image.pc
src/build-image-ROS-Default/devel/share/image/cmake/: image-msg-paths.cmake  imageConfig.cmake
src/build-image-ROS-Default/devel/share/roseus/ros/image/: manifest.l
src/build-image-ROS-Default/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
src/build-image-ROS-Default/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
src/build-image-ROS-Default/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src/image/: CMakeLists.txt
src/image/src/: compressed_sub.cpp
